... - add Windows support - edit README.md - create pom.xml